--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
                 <h1>Daniel Rojas</h1>
                 <h2>Data Analyst</h2>
                 <div class="header-action-aria">
-                    <a href="https://github.com/c4tmus/CV-/blob/main/CV%2Ban%C3%A1lisis%2BDaniel.pdf" download ="CV+análisis+Daniel.pdf
-                    " class="btn" download="./image/CV.pdf" target="_blank">Download CV </a>
+                    <a href="https://github.com/c4tmus/cv/blob/main/Daniel%20CV.pdf" download ="Daniel CV.pdf"
+                    class="btn" download="./image/CV.pdf" target="_blank">Download CV </a>
                     <a href="#Contact" class="btn  btn-dark">Contact info</a>
                 </div>
                 <div class="header-social">
